Fix Maple Island scripts and shops, add check for looting quest items